bug: update Dockerfile laravel

--- a/todo-list/Dockerfile
+++ b/todo-list/Dockerfile
@@ -1,31 +1,32 @@
 FROM php:8.4-fpm
 
 RUN apt-get update && apt-get install -y \
-    git curl zip unzip libpng-dev libonig-dev libxml2-dev libzip-dev \
-    && docker-php-ext-install pdo_mysql mbstring zip gd
-
-RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
-    && apt-get install -y nodejs
+    build-essential \
+    libpng-dev \
+    libjpeg-dev \
+    libonig-dev \
+    libxml2-dev \
+    zip \
+    unzip \
+    git \
+    curl \
+    npm \
+    nodejs \
+    libpq-dev \
+    && docker-php-ext-install pdo pdo_pgsql mbstring exif pcntl bcmath gd
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 WORKDIR /var/www
 
-COPY composer.json composer.lock ./
-COPY package.json package-lock.json ./
-
-RUN composer install --no-scripts --no-autoloader
-RUN npm install
-
 COPY . .
 
-RUN npm run build
+RUN composer install --no-interaction --optimize-autoloader
 
-RUN composer dump-autoload --optimize \
-    && php artisan optimize:clear || true
+RUN npm install && npm run build
 
-RUN chown -R www-data:www-data /var/www \
-    && chmod -R 755 /var/www/storage /var/www/bootstrap/cache
+RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache
 
 EXPOSE 9000
+
 CMD ["php-fpm"]
